2008-10-13  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>

  * src/home/hd-edit-menu.c (hd_edit_menu_init) : Corrected edit menu strings.
  Fixes: NB#88317
  * src/home/hd-edit-menu.c (hd_edit_menu_constructed) : Changed tabs to spaces.

2008-10-07  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>

  * src/launcher/hd-app-launcher.c (hd_app_launcher_activate) : Added a child
  setup funcion called by g_spawn_async that sets up the correct priority and
  OOM unprotection. Fixes: NB#87443

2008-09-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 1:2.2.3-1

2008-09-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-dialog.c (hd_dialog_realize): In the case Matchbox created
	the modal blocker, select for ButtonRelease events on the window. This
	enables us to catch ButtonRelease for system-modal dialogs.

2008-09-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 1:2.2.2-1

2008-09-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* configure.ac: Add gettext-related stuff from the old code.

	* src/main.c (main): Initialise locale and gettext system.

	* src/hildon-desktop.h: New file for global defines.

	* src/launcher/hd-app-launcher.c (hd_app_launcher_get_label): Use
	gettext() to get localised application name.

2008-09-09  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/launcher/hd-task-launcher.c
	(hd_task_launcher_get_preferred_height): Use amount of rows to
	calculate the height. Fix a one-off problem when determining start of
	a new row. Fixes: NB#88209

	* src/home/hd-home.c (hd_home_constructed): Remove obsolete code for
	adding a search path for temporary icons.

	* Debug printout adjustments here and there.

2008-09-02  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* debian/hildon-desktop.postinst: Added. Modify Gtk icon theme to
	include 48x48 icons. Update Gtk icon cache. Install the GConf schema.

	* debian/hildon-desktop.init: Added. Start and stop hildon-desktop