@@ -1,3 +1,8 @@
+2008-10-14  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>
+
+  * src/home/hd-layout-dialog.c (hd_layout_dialog_constructed) : Scale the
+  thumbnail view instead of setting its size when using fbos. Fixes: NB#88355
+
 2008-10-13  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>
 
   * src/home/hd-edit-menu.c (hd_edit_menu_init) : Corrected edit menu strings.
